2011-06-15  Jeremy Orlow  <jorlow@webkit.org>

        Change my email to @webkit.org

        * Scripts/webkitpy/common/config/committers.py:

2011-06-15  Nikolas Zimmermann  <nzimmermann@rim.com>

        Reviewed by David Hyatt.

        CSS 2.1: Support replaced elements with relative intrinsic sizes
        https://bugs.webkit.org/show_bug.cgi?id=15849

        CSS 2.1 failure: html4/replaced-intrinsic-ratio-001
        https://bugs.webkit.org/show_bug.cgi?id=53099

        Recognize *.htm tests in the old & new DRT implementation, needed for the vanilla css2.1 html4 tests.

        * Scripts/old-run-webkit-tests:
        * Scripts/webkitpy/layout_tests/port/test_files.py:

2011-06-15  Carlos Garcia Campos  <cgarcia@igalia.com>

        Reviewed by Martin Robinson.

        [GTK] Add a statusbar to MiniBrowser
        https://bugs.webkit.org/show_bug.cgi?id=62634

        It shows the url of the current hovered link.

        * MiniBrowser/gtk/BrowserWindow.c:
        (browserWindowConstructed): Create the GtkSatusbar.
        (mouseDidMoveOverElement): Update statusbar text.
        (browserWindowUIClientInit): Add implementation for
        mouseDidMoveOverElement().
        * MiniBrowser/gtk/GNUmakefile.am: Add new files to compilation.
        * MiniBrowser/gtk/WebBundle/WebBundleMain.c: Added.
        (mouseDidMoveOverElement): Pass the url of the current hovered
        link to the UI process.
        (didCreatePage): Set the UI client adding an implementation for
        mouseDidMoveOverElement().
        (WKBundleInitialize):
        * MiniBrowser/gtk/main.c:
        (createWKContextWithInjectedBundle): Create a global context with
        the injected bundle.
        (loadURI): Use the global context.
        (main):

2011-06-14  Lucas Forschler  <lforschler@apple.com>

        Reviewed by Stephanie Lewis.

        https://bugs.webkit.org/show_bug.cgi?id=62495
        Bug 62495 - combine windows and mac kill-old-processes script